--- a/node-v8.9.4-alpine/Dockerfile
+++ b/node-v8.9.4-alpine/Dockerfile
@@ -5,14 +5,13 @@ RUN mv /etc/apk/repositories /etc/apk/repositories.old && \
     apk add --no-cache --update-cache tzdata curl bash python make g++ redis mongodb lsof sysstat krb5-dev && \
     cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo 'Asia/Shanghai' >/etc/timezone && \
-    mkdir -p /root/gamepath /root/.node-gyp/$NODE_VERSION /root/download && \
-    curl "http://cdn.npm.taobao.org/dist/node/v$NODE_VERSION/node-v$NODE_VERSION-headers.tar.gz" -Lso /root/download/node-v$NODE_VERSION-headers.tar.gz && \
-    tar --strip-components 1 -C /root/.node-gyp/$NODE_VERSION -zxf /root/download/node-v$NODE_VERSION-headers.tar.gz && \
-    echo 9 >/root/.node-gyp/$NODE_VERSION/installVersion && \
-    rm -rf /root/download
+    mkdir -p /root/.node-gyp/$NODE_VERSION && \
+    curl -kLs "https://npm.taobao.org/mirrors/node/v$NODE_VERSION/node-v$NODE_VERSION-headers.tar.gz" | tar --strip-components 1 -C /root/.node-gyp/$NODE_VERSION -zx && \
+    echo 9 > /root/.node-gyp/$NODE_VERSION/installVersion
 
-COPY server.sh /root/
-RUN chmod +x /root/server.sh
+COPY server.sh /root/server.sh
+
+RUN mkdir /root/gamepath && chmod +x /root/server.sh
 
 VOLUME ["/root/gamepath", "/var/lib/mongodb"]
 
